--- a/pages/batallas_mob.html
+++ b/pages/batallas_mob.html
@@ -215,7 +215,7 @@
 
             var left_limit = left > 0 && left > marginLeft;
             var right_limit = left < left2 && left < marginLeft2;
-            if (!(left_limit && right_limit)) { //not all
+            if ((left_limit || right_limit) && !(left_limit && right_limit)) { //not all
                 var overflows = $(this).width() > $(gameCanvas).width();
                 if ((left_limit && !overflows) || (right_limit && overflows)) {
                     if (marginLeft > 0) {
@@ -224,7 +224,7 @@
                         cambio = 0;
                     }
                     moveGameArea(gameCanvas, left, cambio, "left");
-                }else{
+                } else {
                     if (marginLeft2 < left2) {
                         cambio = marginLeft2;
                     } else {
@@ -236,7 +236,8 @@
 
             var top_limit = top > 0 && top > marginTop;
             var bottom_limit = top < top2 && top < marginTop2;
-            if (!(top_limit && bottom_limit)) { //not all
+            if ((top_limit || bottom_limit) && !(top_limit && bottom_limit)) { //not all
+                console.log(top_limit + " && " + bottom_limit)
                 var overflows = $(this).height() > $(gameCanvas).height();
                 if ((top_limit && !overflows) || (bottom_limit && overflows)) {
                     if (marginTop > 0) {
@@ -245,7 +246,7 @@
                         cambio = 0;
                     }
                     moveGameArea(gameCanvas, top, cambio, "top");
-                }else {
+                } else {
                     if (marginTop2 < top2) {
                         cambio = marginTop2;
                     } else {
