--- a/pages/batallas_mob.html
+++ b/pages/batallas_mob.html
@@ -171,8 +171,10 @@
 
         reescale();
 
-        var marginLeft = (gameArea.width() - bordes - gameCanvas.width()) / 2;
-        var marginTop = (gameArea.height() - bordes - gameCanvas.height()) / 2;
+//        var marginLeft = (gameArea.width() - bordes - gameCanvas.width()) / 2;
+//        var marginTop = (gameArea.height() - bordes - gameCanvas.height()) / 2;
+        var marginLeft = 0;
+        var marginTop = 0;
         gameCanvas.css("left", marginLeft + 'px');
         gameCanvas.css("top", marginTop + 'px');
 
