--- a/pages/batallas_mob.html
+++ b/pages/batallas_mob.html
@@ -170,11 +170,13 @@
         }
 
         reescale();
-
-        var marginLeft = Math.min((gameArea.width() - bordes - gameCanvas.width()) / 2, 100);
-        var marginTop = Math.min((gameArea.height() - bordes - gameCanvas.height()) / 2, 100);
-        gameCanvas.css("left", marginLeft + 'px');
-        gameCanvas.css("top", marginTop + 'px');
+        
+        var startLeft = (gameArea.width() - bordes - gameCanvas.width()) / 2;
+        var startTop = (gameArea.width() - bordes - gameCanvas.width()) / 2;
+        var marginLeft = Math.min(startLeft, 100);
+        var marginTop = Math.min(startTop, 100);
+        gameCanvas.css("left", startLeft + 'px');
+        gameCanvas.css("top", startTop + 'px');
 
         Hammer($('#contenidos')).on('touch', function (ev) {
             ev.preventDefault();
