--- a/pages/batallas_mob.html
+++ b/pages/batallas_mob.html
@@ -75,17 +75,52 @@
 
 <script>
 
-    batalla.loadBatalla = [];
-    batalla.grupos = {};
-    batalla.imagenes = [];
-    batalla.imagenesObj = {};
+//    batalla.loadBatalla = [];
+//    batalla.grupos = {};
+//    batalla.imagenes = [];
+//    batalla.imagenesObj = {};
 
     //var batallaJSON = global.batallas;
 
-    mostrarDatos();
-    centrarGameArea();
+    //getBatalla
+    if (batalla.tipo != "juvenil") {
+        ajax.call("getBatalla", {id: batalla.id}, function (res) {
+            batalla = res;
+        });
+
+    } else {
+        if (typeof batalla.resultados == 'undefined') {
+            ajax.call("getBatalla", {id: batalla.id}, function (res) {
+                batalla = res;
+            });
+        }
+    }
+
+    getBatallaVisible(batalla, function (data) {
+        // console.log(batalla)
+        if (!data) {
+            console.log("!batalla");
+            aviso("error al mostrar batalla");
+            return;
+        }
+        if (!data.alinLoc || !data.alinVis) {
+            console.log("!batalla.alinLoc || !batalla.alinVis");
+            aviso("error al mostrar batalla");
+            return;
+        }
+
+        console.log("batalla cargada: " + data);
+        window.batallaJSON = data;
+
+        mostrarDatos();
+        centrarGameArea();
+    });
 
     function mostrarDatos() {
+        if (!window.batallaJSON) {
+            console.log("!window.batallaJSON in mostrarDatos()");
+            return;
+        }
 
         $(".cuerpo").css("display", "none");
         $("#resultadosBatalla").css("display", "inherit");
@@ -170,7 +205,7 @@
         }
 
         reescale();
-        
+
         var startLeft = (gameArea.width() - bordes - gameCanvas.width()) / 2;
         var startTop = (gameArea.height() - bordes - gameCanvas.height()) / 2;
         var marginLeft = Math.min(startLeft, 100);
@@ -294,7 +329,7 @@
     $("#gameArea > div").css("background-size", "180px");
     $("#container > canvas").css("background-size", "100px");
     $("#container > canvas").css("border-width", "100px");
-    
+
     function reescale(scale) {
         var area = parseInt($("#gameArea > div").css("background-size"));
         $("#gameArea > div").css("background-size", area * scale + "px");
