--- a/pages/loadIndex_mob.html
+++ b/pages/loadIndex_mob.html
@@ -338,7 +338,7 @@
         $("#log").text("loading user preferences");
         cargarPerfil();
         $("#log").text("loading map screen");
-        cargar('mapa');
+        cargar();
         $("#log").text("showing game");
         $("#pantalla").css("display", "none");
         $("#iframe").css("display", "none");
