--- a/pages/batallas_mob.html
+++ b/pages/batallas_mob.html
@@ -98,7 +98,7 @@
         }
     }
 
-    getBatallaVisible(batallaINFO, function (data) {
+    getBatallaVisible(window.batallaINFO, function (data) {
         // console.log(batalla)
         if (!data) {
             console.log("!batalla");
