--- a/pages/batallas_mob.html
+++ b/pages/batallas_mob.html
@@ -74,11 +74,12 @@
 </div>
 
 <script>
-
-//    batalla.loadBatalla = [];
-//    batalla.grupos = {};
-//    batalla.imagenes = [];
-//    batalla.imagenesObj = {};
+    
+    //reset?
+    batalla.loadBatalla = [];
+    batalla.grupos = {};
+    batalla.imagenes = [];
+    batalla.imagenesObj = {};
 
     //var batallaJSON = global.batallas;
 
