--- a/pages/batallas_mob.html
+++ b/pages/batallas_mob.html
@@ -329,17 +329,17 @@
 
     }
 
-    $("#gameArea > div").css("background-size", "180px");
-    $("#container > canvas").css("background-size", "100px");
-    $("#container > canvas").css("border-width", "100px");
+//    $("#gameArea > div").css("background-size", "180px");
+//    $("#container > canvas").css("background-size", "100px");
+//    $("#container > canvas").css("border-width", "100px");
 
     function reescale(scale) {
-        var area = parseInt($("#gameArea > div").css("background-size")) || 1;
-        $("#gameArea > div").css("background-size", area * scale + "px");
-        var background = parseInt($("#gameArea > div").css("background-size")) || 1;
-        $("#container > canvas").css("background-size", background * scale + "px");
-        var border = parseInt($("#gameArea > div").css("background-size")) || 1;
-        $("#container > canvas").css("border-width", border * scale + "px");
+        var area = parseInt($("#gameArea > div").css("background-size")) || 180;
+        $("#gameArea > div").css("background-size", parseInt(area * scale) + "px");
+        var background = parseInt($("#gameArea > div").css("background-size")) || 100;
+        $("#container > canvas").css("background-size", parseInt(background * scale) + "px");
+        var border = parseInt($("#gameArea > div").css("background-size")) || 100;
+        $("#container > canvas").css("border-width", parseInt(border * scale) + "px");
     }
 
     function moveGameArea(gameCanvas, margenActual, cambio, margen) {
