--- a/pages/batallas_mob.html
+++ b/pages/batallas_mob.html
@@ -513,7 +513,7 @@
         document.getElementById("defensa").innerHTML = criaturaId.defensa;
         document.getElementById("reaccion").innerHTML = criaturaId.reaccion;
 
-        loadCanvasAspecto(criaturaId, "aspecto");
+        loadCanvasAspecto(criaturaId, batalla.stage);
     }
 
     var iniciado = false;
