--- a/pages/perfilDatos.html
+++ b/pages/perfilDatos.html
@@ -40,7 +40,7 @@
         $("#menu").removeClass("checked");
     }
                          
-    $("#usuario").text(perfil.nombreId);
+    $("#usuario").text(global.perfil.nombreId);
             
     function cambioGraficos(){            
         var menu = false;                
