--- a/pages/batallas_mob.html
+++ b/pages/batallas_mob.html
@@ -328,7 +328,7 @@
     }
 
     function reescale(scale) {
-        var size = parseInt(($("#gameArea > div").css("background-size") || 150) * scale);
+        var size = parseInt(($("#gameArea > div").css("background-size")) * scale) || 150;
 
         $("#gameArea > div").css("background-size", size + "px");
         var offset = $("#container > canvas").offset();
