--- a/pages/batallas_mob.html
+++ b/pages/batallas_mob.html
@@ -328,7 +328,7 @@
     }
 
     function reescale(scale) {
-        var size = parseInt(($("#gameArea > div").css("background-size")) * scale) || 150;
+        var size = parseInt(parseInt($("#gameArea > div").css("background-size")) * scale) || 150;
         console.log("reescale(" + scale + ") " + size);
 
         $("#gameArea > div").css("background-size", size + "px");
