--- a/pages/batallas_mob.html
+++ b/pages/batallas_mob.html
@@ -7,7 +7,8 @@
     #muertes .muerte > div{
         overflow:hidden;
         text-overflow:ellipsis; 
-        width: 100%
+        width: 100% !important;
+        font-size: 12px;
     }
 </style>
 
@@ -152,7 +153,6 @@
                 continue;
             }
             var arr = muerte.split(":");
-
             var row = $("<tr class='UnHighLight'>").appendTo(table);
 
             $("<td class='muerte' style='text-align:right'>"
@@ -422,7 +422,7 @@
                     setCriaturasBatallaJuv(equipo2);
                 }
 
-                $("#estadisticas").append("<div class='temp'>(En las batallas de academia los stats están comienzan ocultos)</div>");
+                $("#estadisticas").append("<div class='temp' style='font-size:12px'>(En las batallas de academia los stats están comienzan ocultos)</div>");
             }
 
             var imagenes = [];
