--- a/pages/batallas_mob.html
+++ b/pages/batallas_mob.html
@@ -204,7 +204,7 @@
 
     function ordenarGameArea() {
         var gameCanvas = $("#container > canvas");
-        $("#gameArea").height($(document).height());
+//        $("#gameArea").height($(document).height());
         var gameArea = $("#gameArea");
 
         var borde = parseInt(gameCanvas.css("border-width"));
