--- a/pages/loadIndex_mob.html
+++ b/pages/loadIndex_mob.html
@@ -451,7 +451,7 @@
             $(document).one("click", function () {
                 $("footer").removeClass("show");
             });
-        }, 1200); //w8 1 sec. of swipe
+        }, 100); //w8 swipe
     }
 
 
