--- a/pages/loadIndex_mob.html
+++ b/pages/loadIndex_mob.html
@@ -447,14 +447,16 @@
 
     function hideFooterEvent() {
 //        clearTimeout(window.hideFooterTimeout);
-//        window.hideFooterTimeout = setTimeout(function () {
-        $(document).on("mousedown.hideFooterEvent", function () {
-            $(document).one("mouseup", function () {
-                $(document).off(".hideFooterEvent");
-                $("footer").removeClass("show");
+        window.hideFooterTimeout = setTimeout(function () {
+            $(document).on("mousedown.hideFooterEvent", function () {
+                console.log("mousedown")
+                $(document).one("mouseup", function () {
+                    console.log("mouseup")
+                    $(document).off(".hideFooterEvent");
+                    $("footer").removeClass("show");
+                });
             });
-        });
-//        }, 100); //w8 swipe
+        }, 1); //w8 swipe
     }
 
 
