--- a/pages/loadIndex_mob.html
+++ b/pages/loadIndex_mob.html
@@ -424,7 +424,7 @@
                 }
 
                 $(document).on("mousemove.footer touchmove.footer", function (e) {
-                    consoe.log()
+                    console.log("mousemove touchmove");
                     var x = event(e).pageX - originX;
                     var y = event(e).pageY - originY;
 
