--- a/pages/loadIndex_mob.html
+++ b/pages/loadIndex_mob.html
@@ -448,7 +448,7 @@
     };
 
     function hideFooterEvent() {
-        //console.log("hideFooterEvent()")
+        console.log("hideFooterEvent()");
         clearTimeout(window.hideFooterTimeout);
         $(document).off(".hideFooterEvent");
 
